compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_left_single_quotation_mark.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() { ‘hello’ }"
---
----- SOURCE CODE
pub fn main() { ‘hello’ }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { ‘hello’ }
  │                 ^ Unexpected character

This looks like ascii single quote, but it is actually the unicode single
quotation mark.
