compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_low_single_comma_quotation_mark.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() { #(1‚ 2) }"
---
----- SOURCE CODE
pub fn main() { #(1‚ 2) }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:20
  │
1 │ pub fn main() { #(1‚ 2) }
  │                    ^ Unexpected character

This looks like ascii comma, but it is actually the unicode low single
comma quotation mark.
