compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_right_single_quotation_mark.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2197
expression: "pub fn main() { ’hello }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { ’hello }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { ’hello }
  │                 ^ Unexpected character

This looks like ascii single quote, but it is actually the unicode single
quotation mark.
